--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-webpack-boilerplate",
-  "version": "0.1.0",
+  "version": "1.0.1",
   "private": true,
   "dependencies": {
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
+    "react": "16.8.1",
+    "react-dom": "16.8.1",
     "react-scripts": "2.1.3"
   },
   "scripts": {
@@ -24,14 +24,14 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "css-loader": "^2.1.0",
-    "style-loader": "^0.23.1",
-    "webpack-cli": "^3.2.1"
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.3",
+    "babel-loader": "7.1.5",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-plugin-transform-react-jsx": "6.24.1",
+    "babel-preset-env": "1.7.0",
+    "css-loader": "2.1.0",
+    "style-loader": "0.23.1",
+    "webpack-cli": "3.2.1"
   }
 }
